2008-05-17  Philipp K Janert  <janert@ieee.org>
	
	* src/graph3d.h src/plot3d.c src/plot3d.h src/save.c src/set.c
	src/show.c src/unset.c docs/gnuplot.doc
	Adding new smoothing kernels to the dgrid3d logic.

	* src/gp_types.h src/interpol.c src/plot2d.c src/tables.c
	docs/gnuplot.doc
	New smoothing algorithm: 'smooth cumulative', which plots a
	cumulative distribution function of a random collection of points.

2008-05-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgnuplib.h src/win/wgraph.c src/win/winmain.c term/win.trm:
	Allow 'set term win ... title "foo"' to change the title displayed for
	the plot window.

2008-05-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (get_num):  Parse integer constants on the command line
	using strtol() rather than atol().  This allows catching overflows and
	has the side benefit of handling hexadecimal and octal constants.
	Fixes bug from mouse+zoom with very large coordinate values.

2008-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm (SVG_layer):  Under some conditions a "front" grid or
	border could cause a spurious black-fill of the entire plot. Fix this
	by forcing a new group after the plot body, which will have fill:none.

2008-05-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Switch to dynamic allocation of strings read from a
	data file. This removes the limit of 64 characters per string.

2008-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (ENHPDF_FLUSH ENHPDF_put_text):  We correctly issue 
	save/restore requests to PDFlib, but we need to mirror these in the
	terminal code so that we track what font is currently selected.

2008-05-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_set_font)
	src/wxterminal/gp_cairo.h:
	Look for "Bold" and "Italic" in requested font name, and translate
	this into a request for the corresponding variant of the base font.